<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.turbospaces</groupId>
    <artifactId>turbospaces-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>turbospaces</name>
    <url>https://github.com/aandreyborisov/turbospaces</url>
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>
    <distributionManagement>
        <repository>
            <id>release-repository</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>snapshot-repository</id>
            <name>Maven2 Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>
    <inceptionYear>2011</inceptionYear>
    <organization>
        <name>${project.name}</name>
        <url>${project.url}</url>
    </organization>
    <prerequisites>
        <maven>2.2.1</maven>
    </prerequisites>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ssZ</maven.build.timestamp.format>
        <!-- test libraries -->
        <junit-revision>4.9</junit-revision>
        <mockito-revision>1.8.5</mockito-revision>
        <hamcrest-revision>1.1</hamcrest-revision>
        <junit-benchmarks-revision>0.3.0</junit-benchmarks-revision>
        <!-- logging -->
        <logback-revision>1.0.1</logback-revision>
        <slf4j-revision>1.6.4</slf4j-revision>
        <!-- actual turbospaces dependencies -->
        <spring-revision>3.1.1.RELEASE</spring-revision>
        <jgroups-revision>3.0.10.Final</jgroups-revision>
        <spring-data-commons-revision>1.3.0.RELEASE</spring-data-commons-revision>
        <kryo-revision>1.04</kryo-revision>
        <sigar-revision>1.6.4</sigar-revision>
        <cglib-revision>2.2.2</cglib-revision>
        <spring-data-revision>1.0.1.RELEASE</spring-data-revision>
        <guava-revision>12.0</guava-revision>
        <disruptor-revision>2.10</disruptor-revision>
        <!-- sonar -->
        <sonar.java.source>1.6</sonar.java.source>
        <sonar.java.target>1.6</sonar.java.target>
        <sonar.jdbc.username>sonar</sonar.jdbc.username>
        <sonar.jdbc.password>sonar</sonar.jdbc.password>
        <sonar.hibernate.default_schema>sonar</sonar.hibernate.default_schema>
        <sonar.skippedModules>turbospaces-collections-uat</sonar.skippedModules>
        <!-- maven -->
        <cobertura.maxmem>512m</cobertura.maxmem>
        <maven.plugin.source.version>2.1.2</maven.plugin.source.version>
        <maven.plugin.jar.version>2.4</maven.plugin.jar.version>
        <maven.plugin.compiler.version>2.3.2</maven.plugin.compiler.version>
        <maven.plugin.cobertura.version>2.5.1</maven.plugin.cobertura.version>
        <maven.plugin.surefire.version>2.10</maven.plugin.surefire.version>
        <maven.plugin.license.version>1.4.0</maven.plugin.license.version>
        <maven.plugin.docbkx.version>2.0.14</maven.plugin.docbkx.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring-revision}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>spring-asm</artifactId>
                        <groupId>org.springframework</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>commons-logging</artifactId>
                        <groupId>commons-logging</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-commons-core</artifactId>
                <version>${spring-data-commons-revision}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>junit-dep</artifactId>
                        <groupId>junit</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-asm</artifactId>
                <version>${spring-revision}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring-revision}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring-revision}</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode</groupId>
                <artifactId>kryo</artifactId>
                <version>${kryo-revision}</version>
            </dependency>
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>${cglib-revision}</version>
            </dependency>
            <dependency>
                <groupId>org.jgroups</groupId>
                <artifactId>jgroups</artifactId>
                <version>${jgroups-revision}</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.disruptor</groupId>
                <artifactId>disruptor</artifactId>
                <version>${disruptor-revision}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava-revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit-revision}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito-revision}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>${hamcrest-revision}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.compiler.version}</version>
                <configuration>
                    <optimize>true</optimize>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <runOrder>hourly</runOrder>
                    <argLine>-ea -Djava.net.preferIPv4Stack=true
                        -Djgroups.logging.log_factory_class=com.turbospaces.logging.JGroupsCustomLoggerFactory</argLine>
                    <excludes>
                        <exclude>**/*PerformanceTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>${maven.plugin.cobertura.version}</version>
                <configuration>
                    <excludes>
                        <exclude>com/turbospaces/logging/**/*.class</exclude>
                        <exclude>com/turbospaces/core/PerformanceMonitor.class</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.plugin.surefire.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.plugin.jar.version}</version>
                    <configuration>
                        <archive>
                            <addMavenDescriptor>false</addMavenDescriptor>
                            <manifest>
                                <addClasspath>false</addClasspath>
                            </manifest>
                            <manifestEntries>
                                <Created-By>${java.version} (${java.vendor})</Created-By>
                                <Built-By>${project.name} team</Built-By>
                                <Implementation-Version>${project.version}</Implementation-Version>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.plugin.source.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <modules>
        <module>collections</module>
        <module>core</module>
        <module>monitor</module>
        <module>documentation</module>
        <module>uat</module>
    </modules>
    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>yourkit-win64</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <runOrder>hourly</runOrder>
                            <argLine>-ea
                                -agentpath:"${env.YOURKIT_HOME}\bin\win64\yjpagent.dll=disablestacktelemetry,disableexceptiontelemetry,builtinprobes=none,onexit=snapshot,sampling,noj2ee"</argLine>
                            <includes>
                                <include>**/*PerformanceTest.java</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>yourkit-linux64</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <runOrder>hourly</runOrder>
                            <argLine>-ea
                                -agentpath:"${env.YOURKIT_HOME}/bin/linux-x86-64/libyjpagent.so=disablestacktelemetry,disableexceptiontelemetry,builtinprobes=none,onexit=snapshot,sampling,noj2ee"</argLine>
                            <includes>
                                <include>**/*PerformanceTest.java</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <modules>
                <module>collections</module>
                <module>core</module>
            </modules>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M</argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.google.code.maven-license-plugin</groupId>
                        <artifactId>maven-license-plugin</artifactId>
                        <version>${maven.plugin.license.version}</version>
                        <configuration>
                            <header>src/main/resources/license-header.txt</header>
                            <encoding>${project.build.sourceEncoding}</encoding>
                            <aggregate>true</aggregate>
                            <skipExistingHeaders>true</skipExistingHeaders>
                            <strictCheck>true</strictCheck>
                            <useDefaultExcludes>true</useDefaultExcludes>
                            <includes>
                                <include>src/main/**/*.java</include>
                            </includes>
                            <properties>
                                <year>${project.inceptionYear}-2012</year>
                                <author>Andrey Borisov</author>
                                <email>aandrey.borisov@gmail.com</email>
                            </properties>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>